<resources>
    <string name="app_name">RottenTomatoes</string>
    <string name="username">Enter Your User Name</string>
    <string name="password">Enter Your Password</string>
    <string name="navigation">Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="email">Enter Your Email ID</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="forgot">Forgot Password</string>
    <string name="reset">Reset Password</string>
    <string name="text">Enter Password(Text Only)</string>
    <string name="sixteen">2016 Movies</string>
    <string name="fifteen">2015 Movies</string>
    <string name="available">Available Movies</string>
    <string name="addmovie">Add a Movie</string>
    <string name="facebook_app_id">287910968243573</string>
</resources>
