<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.rottentomatoes.ResetPasswordActivity"
    tools:showIn="@layout/activity_reset"
    android:background="@color/blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/rotten"
            android:layout_margin="5sp"/>

        <EditText
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_margin="5sp"
            android:id="@+id/name"
            android:layout_below="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/email"
            android:background="@drawable/edittext"/>

        <Button
            android:text="@string/reset"
            android:layout_margin="5dp"
            android:id="@+id/reset"
            android:layout_below="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button"/>

        <Button
            android:text="@string/back"
            android:layout_margin="5sp"
            android:id="@+id/back"
            android:layout_below="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button"/>


    </RelativeLayout>
    </ScrollView>